I work at Scribd now

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ li{padding-bottom: 3px;}
 		<div id="txt">
 			<h2>Mike Lewis</h2>
 			<ul id="list_of">
-				<li>Software Engineering Intern at Coming Soon :)</li>
+                          <li>Software Engineering Intern at <a href="http://scribd.com">Scribd</a></li>
 				<li><a href="http://cs.rit.edu">Computer Science Student</a> from <a href="http://rit.edu">Rochester Institute of Technology</a></li>
 				<li>Member of <a href="http://csh.rit.edu/">Computer Science House</a></li>
 				<li>Interested in:</li>
